add caching module

--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -70,6 +70,10 @@
 		<PackageVersion Include="Microsoft.Build" Version="18.0.2" />
 
 
+    <PackageVersion Include="Microsoft.Extensions.Caching.Hybrid" Version="10.1.0" />
+ <PackageVersion Include="Bogus" Version="35.6.5" />
+
+
 
 
 
