add redis cache module

--- a/SimpleAppDemo/appsettings.json
+++ b/SimpleAppDemo/appsettings.json
@@ -9,6 +9,10 @@
   "ConnectionStrings": {
     "Default": "Server=(localdb)\\MSSQLLocalDB;Database=SimpleDemoDb;Trusted_Connection=True;"
   },
+  "Redis": {
+    "Configuration": "127.0.0.1:6379",
+    "InstanceName": "simple_app_"
+  },
   "MyGroup": {
     "TestOption": "This is a test option value"
   }
