--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -71,6 +71,8 @@
 
 
     <PackageVersion Include="Microsoft.Extensions.Caching.Hybrid" Version="10.1.0" />
+    <PackageVersion Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="10.0.1" />
+
  <PackageVersion Include="Bogus" Version="35.6.5" />
 
 
