--- a/SimpleAppDemo/SimpleAppDemo.csproj
+++ b/SimpleAppDemo/SimpleAppDemo.csproj
@@ -9,8 +9,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-      <PackageReference Include="Bogus"  />
+      <PackageReference Include="Bogus" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" />
+      <ProjectReference Include="..\src\framework\caching\Ramsha.Caching.Redis\Ramsha.Caching.Redis.csproj" />
       <ProjectReference Include="..\src\framework\caching\Ramsha.Caching\Ramsha.Caching.csproj" />
       
     <ProjectReference Include="..\src\framework\entity-framework-core\Ramsha.EntityFrameworkCore.SqlServer\Ramsha.EntityFrameworkCore.SqlServer.csproj" />
