--- a/src/framework/caching/Ramsha.Caching.Redis/Ramsha.Caching.Redis.csproj
+++ b/src/framework/caching/Ramsha.Caching.Redis/Ramsha.Caching.Redis.csproj
@@ -8,8 +8,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Ramsha.Core\Ramsha.Core.csproj" />
-    <PackageReference Include="Microsoft.Extensions.Caching.Hybrid" />
+    <ProjectReference Include="..\Ramsha.Caching\Ramsha.Caching.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" />
   </ItemGroup>
 
 </Project>
