--- a/src/modules/identity/Ramsha.Identity.Shared/Ramsha.Identity.Shared.csproj
+++ b/src/modules/identity/Ramsha.Identity.Shared/Ramsha.Identity.Shared.csproj
@@ -7,6 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+  <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
+    <_Parameter1>Ramsha.Identity.Domain</_Parameter1>
+  </AssemblyAttribute>
+</ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\..\framework\Ramsha.Core\Ramsha.Core.csproj" />
   </ItemGroup>
 
