--- a/src/framework/aspnetcore/Ramsha.AspNetCore.Authentication.Jwt/Ramsha.AspNetCore.Authentication.Jwt.csproj
+++ b/src/framework/aspnetcore/Ramsha.AspNetCore.Authentication.Jwt/Ramsha.AspNetCore.Authentication.Jwt.csproj
@@ -1,5 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
+  <Import Project="..\..\..\..\common.props" />
+
   <PropertyGroup>
     <TargetFramework>net10.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
