--- a/SimpleAppDemo/appsettings.json
+++ b/SimpleAppDemo/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Default": "Server=(localdb)\\MSSQLLocalDB;Database=SimpleDemoDb;Trusted_Connection=True;"
+    "Default": "Host=localhost;Port=5432;Database=postgres;Username=postgres;Password=postgres;Pooling=true;"
   },
   "Redis": {
     "Configuration": "127.0.0.1:6379",
