add simple pagination

--- a/nuget.config
+++ b/nuget.config
@@ -3,6 +3,7 @@
   <packageSources>
 
   <clear/>
+     <add key="localPackagesFolder" value="./local-packages" />
   <add key="nuget.org" value="https://api.nuget.org/v3/index.json" protocolVersion="3" />
 
   </packageSources>
