--- a/src/framework/common/Ramsha.Common.Domain/Ramsha.Common.Domain.csproj
+++ b/src/framework/common/Ramsha.Common.Domain/Ramsha.Common.Domain.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="../../localization/Ramsha.Localization/Ramsha.Localization.csproj" />
     <ProjectReference Include="..\..\infrastructure\Ramsha.UnitOfWork.Abstractions\Ramsha.UnitOfWork.Abstractions.csproj" />
     <ProjectReference Include="..\..\security\Ramsha.Security\Ramsha.Security.csproj" />
       <ProjectReference Include="..\..\..\framework\settings\Ramsha.Settings\Ramsha.Settings.csproj" />
