--- a/SimpleAppDemo/SimpleAppDemo.csproj
+++ b/SimpleAppDemo/SimpleAppDemo.csproj
@@ -11,6 +11,7 @@
   <ItemGroup>
       <PackageReference Include="Bogus" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" />
+      <ProjectReference Include="../src/modules/translations/Ramsha.Translations/Ramsha.Translations.csproj" />
       <ProjectReference Include="..\src\framework\caching\Ramsha.Caching.Redis\Ramsha.Caching.Redis.csproj" />
       
     <ProjectReference Include="..\src\framework\entity-framework-core\Ramsha.EntityFrameworkCore.PostgreSql\Ramsha.EntityFrameworkCore.PostgreSql.csproj" />
