--- a/src/framework/common/Ramsha.Common.Domain/Ramsha.Common.Domain.csproj
+++ b/src/framework/common/Ramsha.Common.Domain/Ramsha.Common.Domain.csproj
@@ -11,6 +11,7 @@
     <ProjectReference Include="..\..\infrastructure\Ramsha.UnitOfWork.Abstractions\Ramsha.UnitOfWork.Abstractions.csproj" />
     <ProjectReference Include="..\..\security\Ramsha.Security\Ramsha.Security.csproj" />
       <ProjectReference Include="..\..\..\framework\settings\Ramsha.Settings\Ramsha.Settings.csproj" />
+    <ProjectReference Include="../../files/Ramsha.Files/Ramsha.Files.csproj" />
 
   </ItemGroup>
 
